--- a/contact2.html
+++ b/contact2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Andrew Porfolio</title>
-  <link rel="stylesheet" type="text/css"="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -15,7 +15,7 @@
 
 <body>
 
-  <header id="masthead">
+  <header id="header">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
@@ -45,20 +45,27 @@
       </nav>
     </div>
   </header>
-  <form>
-    <div class="form-group">
-      <label for="formGroupExampleInput">NAME:</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+  <section>
+    <div class="container">
+      <div class "row">
+        <div class "col-sm-3">
+          <form>
+            <div class="form-group">
+              <label for="formGroupExampleInput">NAME:</label>
+              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+            </div>
+            <div class="form-group">
+              <label for="formGroupExampleInput2">EMAIL:</label>
+              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">EMAIL:</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
-  </form>
-
+  </section>
   <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="1250" height="339"
     alt="Image result for image dragon">
 
-
+  <footer></footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -70,6 +77,7 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 </body>
-<footer></footer>
+
+
 
 </html>
