--- a/contact2.html
+++ b/contact2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Andrew Porfolio</title>
+  <title>Andrew Porflio</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -27,17 +27,17 @@
 
           <li class="nav-item active">
             <a class="nav-link" href="#">
-              <h1>ANDREW RUSSELL</h1><span class="sr-only">(current)</span>
+              <h1>ANDREW RUSSELL</h1><span class="sr-only"></span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT</a>
+            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">PORFOLIO</a>
+            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/porflio.html#">PORFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">INDEX</a>
+            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">INDEX</a>
           </li>
           </ul>
         </div>
@@ -65,7 +65,7 @@
   <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="1250" height="339"
     alt="Image result for image dragon">
 
-  <footer></footer>
+  <footer>Magick LLC@ 2020</footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
