--- a/porflio.html
+++ b/porflio.html
@@ -4,37 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <head><link rel="stylesheet" type="text/css" href="theme.css">
-    </head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Andrew Porflio</title>
+    <head><link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
    
 </head>
-<nav id="navbar-example2" class="navbar navbar-light bg-light">
-    <h1>Andrew Russell</h1>
-    <p>About</p><p>Porfolio</p><p>Contact</p>
-    <ul class="nav nav-pills">
-  <li class="nav-item">
-   
-    </div>
-  </li>
-</ul>
-</nav>
-<div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-</div>
-<div>
-   <div>
-       <div>
-</div>
-
 <body>
+
+  <header id="header">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="alert alert-success" role="alert">
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">
+              <h1>ANDREW RUSSELL</h1><span class="sr-only"></span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">CONTACT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/porflio.html#">PORFOLIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">INDEX</a>
+          </li>
+          </ul>
+        </div>
+
+      </nav>
+    </div>
+  </header>
+  <section>
+    <div class="container">
+      <div class "row">
+        <div class "col-sm-3">
     <h1>ABOUT ME</h1>
-    <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="602" height="339" style="" alt="Image result for image dragon">
-****************jdfdusdkjfosdijfosidfkfskpdfokwpeokfpowekfpweokpfkopweokfpkwepfokpweokfpwokefpkowefpkowep]efk
-kdsfjdfoijsodfiwsfjp[ekwfopwokfposdkfpsdokfpsofkpsodkfpsdokfpsdfldskjjnfsdjifosijfoijsdoifjwiodfjwoijfoidjoisjdoisd
-sdjufjsijfoiosidjfosidjf[osidjf[osidjfso[difj[sodifksjdhfidujdsklsdjolsdoipjsijdfmfs;lkdfjoid
-sdjkdhidsfosidokflsdkfmdsijfpdspfjojdszxpsdofjpsdo888888*************************************]]]]]
+    <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="1250" height="339" style="" alt="Image result for image dragon">
+Im Andrew Russell I am a coder and a renison man. I love math art and science. I love to study and find out new things.
+My first love is math. I see myself as a hard working person, and like to acheive the best in life. People call me 
+the golden dragon.
+
 </body>
-<footer></footer>
+
+<footer>Magick LLC@ 2020</footer>
 
 </html>
