--- a/contact2.html
+++ b/contact2.html
@@ -31,13 +31,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">CONTACT</a>
+            <a class="nav-link" href="./index.html">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/porflio.html#">PORFOLIO</a>
+            <a class="nav-link" href="./porflio.html">PORFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">INDEX</a>
+            <a class="nav-link" href="./index.html">INDEX</a>
           </li>
           </ul>
         </div>
