--- a/porflio.html
+++ b/porflio.html
@@ -28,13 +28,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">CONTACT</a>
+            <a class="nav-link" href="./index.html">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/porflio.html#">PORFOLIO</a>
+            <a class="nav-link" href="./porflio.html">PORFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Owner/Documents/UNCC-Howork/AR-Portfolio/index.html#">INDEX</a>
+            <a class="nav-link" href="./index.html">INDEX</a>
           </li>
           </ul>
         </div>
@@ -47,6 +47,7 @@
       <div class "row">
         <div class "col-sm-3">
     <h1>ABOUT ME</h1>
+    
     <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="1250" height="339" style="" alt="Image result for image dragon">
 Im Andrew Russell I am a coder and a renison man. I love math art and science. I love to study and find out new things.
 My first love is math. I see myself as a hard working person, and like to acheive the best in life. People call me 
