--- a/contact2.html
+++ b/contact2.html
@@ -62,8 +62,7 @@
       </div>
     </div>
   </section>
-  <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="1250" height="339"
-    alt="Image result for image dragon">
+  <img src="IMG_AndrewRussell_.jpg"width="339" height="339">
 
   <footer>Magick LLC@ 2020</footer>
 
