--- a/porflio.html
+++ b/porflio.html
@@ -48,8 +48,11 @@
         <div class "col-sm-3">
     <h1>ABOUT ME</h1>
     
-    <img class="irc_mi" src="https://i.ytimg.com/vi/fdpYYg3mNjA/maxresdefault.jpg" width="1250" height="339" style="" alt="Image result for image dragon">
-Im Andrew Russell I am a coder and a renison man. I love math art and science. I love to study and find out new things.
+    <img src="IMG_AndrewRussell_.jpg"width="339" height="339" >
+<div>
+  
+</div>
+    Im Andrew Russell I am a coder and a renison man. I love math art and science. I love to study and find out new things.
 My first love is math. I see myself as a hard working person, and like to acheive the best in life. People call me 
 the golden dragon.
 
