--- a/porflio.html
+++ b/porflio.html
@@ -50,11 +50,12 @@
     
     <img src="IMG_AndrewRussell_.jpg"width="339" height="339" >
 <div>
-  
+
 </div>
-    Im Andrew Russell I am a coder and a renison man. I love math art and science. I love to study and find out new things.
-My first love is math. I see myself as a hard working person, and like to acheive the best in life. People call me 
-the golden dragon.
+    Im Andrew Russell I am a coder and a renaissance man. I love math art and science. I love to study and find out new things.
+My first love is math. I see myself as a hard working person, and like to acheive the best in life. I love to add value to the market place
+by solving problem with html and css also Js. I am learning everyday about the coding industry,and also enjoy solving problems for users. 
+I see this industry as a way to grow in many ways. This is a opportunity of the 20th century.
 
 </body>
 
