Updated Contact Page

--- a/contact2.html
+++ b/contact2.html
@@ -63,6 +63,14 @@
     </div>
   </section>
   <img src="IMG_AndrewRussell_.jpg"width="339" height="339">
+<div>
+  </div>
+  <h>Contact Andrew Russell</h>
+
+  <a class="nav-link" href="./AndrewJHRussell@gmail.com">EMAIL</a>
+
+  <h>Phone Number 704 307 9020</h>
+
 
   <footer>Magick LLC@ 2020</footer>
 
