--- a/porflio.html
+++ b/porflio.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="./index.html">CONTACT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./porflio.html">PORFOLIO</a>
+            <a class="nav-link" href="./porflio.html">PORTFOLIO</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./index.html">INDEX</a>
@@ -56,6 +56,8 @@
 My first love is math. I see myself as a hard working person, and like to acheive the best in life. I love to add value to the market place
 by solving problem with html and css also Js. I am learning everyday about the coding industry,and also enjoy solving problems for users. 
 I see this industry as a way to grow in many ways. This is a opportunity of the 20th century.
+
+
 
 </body>
 
