--- a/contact2.html
+++ b/contact2.html
@@ -29,15 +29,15 @@
             <a class="nav-link" href="#">
               <h1>ANDREW RUSSELL</h1><span class="sr-only"></span>
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">CONTACT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./porflio.html">PORFOLIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">INDEX</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./porflio.html">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">INDEX</a>
+            </li>
+              <li class="nav-item"> 
+              <a class="nav-link" href="./index.html">CONTACT</a>
+              </li>
           </li>
           </ul>
         </div>
