Update changed size on contact2 page

--- a/contact2.html
+++ b/contact2.html
@@ -66,8 +66,8 @@
 <div>
   </div>
   <h>Contact Andrew Russell</h>
-
-  <a class="nav-link" href="./AndrewJHRussell@gmail.com">EMAIL</a>
+  <img alt="Gmail, google, mail icon" class="n3VNCb" src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-512.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 50px; height: 50px; margin: 0px;">
+  <img alt="Linkedin, linkedin logo, logo, website icon" class="n3VNCb" src="https://cdn2.iconfinder.com/data/icons/popular-social-media-flat/48/Popular_Social_Media-22-512.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 70px; height: 70px; margin: 0px;">
 
   <h>Phone Number 704 307 9020</h>
 
