fix links to Icons

--- a/contact2.html
+++ b/contact2.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<center>
   <header id="header">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,7 +24,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="alert alert-success" role="alert">
-
+        </center>
+<center>
           <li class="nav-item active">
             <a class="nav-link" href="#">
               <h1>ANDREW RUSSELL</h1><span class="sr-only"></span>
@@ -39,6 +40,7 @@
               <a class="nav-link" href="./index.html">CONTACT</a>
               </li>
           </li>
+        </center>
           </ul>
         </div>
 
@@ -62,14 +64,23 @@
       </div>
     </div>
   </section>
-  <img src="IMG_AndrewRussell_.jpg"width="339" height="339">
+  <center><img src="IMG_ANDREW RUSSELL PROFILE PICTURE.jpg"width="339" height="339"></center>
 <div>
   </div>
+  <center>
   <h>Contact Andrew Russell</h>
-  <img alt="Gmail, google, mail icon" class="n3VNCb" src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-512.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 50px; height: 50px; margin: 0px;">
+  <div></div>
+  <a href="https://AndrewJHRussell@gmail.com">
+  <img alt="Gmail, google, mail icon" class="n3VNCb" src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-512.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 50px; height: 50px; margin: 0px;" >
+ <div></div>
+  <a href="https://www.linkedin.com/in/andrew-russell-83679b175">
   <img alt="Linkedin, linkedin logo, logo, website icon" class="n3VNCb" src="https://cdn2.iconfinder.com/data/icons/popular-social-media-flat/48/Popular_Social_Media-22-512.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 70px; height: 70px; margin: 0px;">
-
+  <div></div>
+  <a href="https://github.com/Andrewjhrussell?tab=repositories">
+  <img alt="Github Logo - Free social media icons" class="n3VNCb" src="https://image.flaticon.com/icons/svg/25/25231.svg" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 50px; height: 50px; margin: 0px;"></a>
+  <div></div>
   <h>Phone Number 704 307 9020</h>
+</center>
 
 
   <footer>Magick LLC@ 2020</footer>
