--- a/porflio.html
+++ b/porflio.html
@@ -11,7 +11,7 @@
    
 </head>
 <body>
-
+<center>
   <header id="header">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -21,7 +21,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="alert alert-success" role="alert">
-
+        </center>
+<center>
           <li class="nav-item active">
             <a class="nav-link" href="#">
               <h1>ANDREW RUSSELL</h1><span class="sr-only"></span>
@@ -35,6 +36,7 @@
               <li class="nav-item"> 
               <a class="nav-link" href="./index.html">CONTACT</a>
               </li>
+            </center>
           </ul>
         </div>
 
@@ -45,9 +47,11 @@
     <div class="container">
       <div class "row">
         <div class "col-sm-3">
-    <h1>ABOUT ME</h1>
+          <center>
+          <h1>ABOUT ME</h1>
     
-    <img src="IMG_AndrewRussell_.jpg"width="339" height="339" >
+    <img src="IMG_ANDREW RUSSELL PROFILE PICTURE.jpg"width="339" height="339" >
+    </center>
 <div>
 
 </div>
@@ -55,7 +59,10 @@
 My first love is math. I see myself as a hard working person, and like to acheive the best in life. I love to add value to the market place
 by solving problem with html and css also Js. I am learning everyday about the coding industry,and also enjoy solving problems for users. 
 I see this industry as a way to grow in many ways. This is a opportunity of the 20th century.
-
+<div></div>
+<center>
+<img alt="Download - Resume Icon Transparent Background Transparent PNG ..." class="n3VNCb" src="https://www.nicepng.com/png/detail/204-2042369_download-resume-icon-transparent-background.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 60px; height: 60px; margin: 0px;">
+</center>
 
 
 </body>
