--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<center>
   <header id="header">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,7 +24,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="alert alert-success" role="alert">
-
+        </center>
+<Center>
           <li class="nav-item active">
             <a class="nav-link" href="#">
               <h1>ANDREW RUSSELL</h1><span class="sr-only"></span>
@@ -38,6 +39,7 @@
               <li class="nav-item"> 
               <a class="nav-link" href="./contact2.html">CONTACT</a>
               </li>
+            </Center>
           </ul>
         </div>
 
@@ -49,10 +51,15 @@
       <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
+          <h1>PROJECT 1</h1>
+          <h2>Pandemic UI</h2>
+
+          <h1>PROJECT 2</h1>
+          <h2>Volunteer App</h2>
 
 
           
-          <img src="IMG_AndrewRussell_.jpg"width="339" height="339">
+          <center><img src="IMG_ANDREW RUSSELL PROFILE PICTURE.jpg"width="339" height="339"></center>
         
         </div>
       </div>
