--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I see this industry as a way to grow in many ways. This is a opportunity of the 
     <center>
       <h1>Contact Andrew Russell</h1>
       <div></div>
-      <a href="https://AndrewJHRussell@gmail.com">
+      <a href="mailto:andrewjhrussell@gmail.com" target="_blank" class="btn btn-primary"></a>
       <img alt="Gmail, google, mail icon" class="n3VNCb" src="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/gmail-512.png" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 50px; height: 50px; margin: 0px;" >
      <div></div>
       <a href="https://www.linkedin.com/in/andrew-russell-83679b175">
