--- a/index.html
+++ b/index.html
@@ -35,13 +35,10 @@
 
 
           <p>
-            Im Andrew Russell I am a coder and a renaissance man. I love math art and science. I love to study and
-            find
-            out new things.
-            My first love is math. I see myself as a hard working person, and like to acheive the best in life. I love
-            to add value to the market place
-            by solving problem with html and css also Js. I am learning everyday about the coding industry,and also
-            enjoy solving problems for users.
+            I am a Full Stack Developer and problem solver. I love math art and science. I love to study and
+            find out new things.
+           I see myself as a hard working person, and like to acheive the best in life. I love
+            to add value to the market place by solving problem with HTML and CSS also JS. I love developing new coding skilling everyday and become more competitive in the market place.
             I see this industry as a way to grow in many ways. This is a opportunity of the 20th century.
           </p>
 
